# ant

./: .gitignore  DEVELOPMENT_ROADMAP.md  PLAN.md  README.md  ant  create-wiki.md  pyproject.toml  setup_ant.py  test_ant.py  test_behavior.py  test_enhanced.py
docs/: LEARNING_STRATEGY.md  USER_GUIDE.md
src/ant/: __about__.py  __init__.py
src/ant/cli/: __init__.py  chat.py  main.py  setup.py
src/ant/learning/: __init__.py  personal_memory.py
src/ant/memory/: __init__.py  conversation.py
src/ant/models/: __init__.py  ollama_client.py
src/ant/personality/: __init__.py  formatter.py
src/ant/tools/: __init__.py  datetime_tools.py  github_tools.py  personal_learning.py  system_analysis.py  system_tools.py  tool_registry.py  web_tools.py
src/ant/user/: __init__.py  auth.py  profile.py
wiki-content/: ant_wiki_authentication.md  ant_wiki_commands.md  ant_wiki_configuration.md  ant_wiki_getting_started.md  ant_wiki_home.md  ant_wiki_troubleshooting.md
